# rasterRenderer

./: .gitignore  CMakeLists.txt  image.ppm  main.cpp  triangle.cpp
include/: build command  camera.h  color.h  draw.h  image.h  image_old.h  light.h  material.h  math_helper.h  model.h  renderer.h  triangle.h  vec2.h  vec3.h
